--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Tabelas</title>
 </head>
 <body>
-    <div>
+    <div id="container">
         <table>
             <caption>
                 Lista de unidades federativas do Brasil por população
